--- a/subpage/design.html
+++ b/subpage/design.html
@@ -49,11 +49,11 @@
 
                 <div class="row">
                     <br><br>
-                    <p>In addition to learning to be a Developer, over the years I have taught myself and gained deep experience with Industry tools such as 
+                    <p>In addition to learning to be a Developer, over the years I have learned and gained deep experience with Industry tools such as 
                     <strong>Sketch
                     </strong> for UI mockups, and <strong>Adobe AfterEffects</strong> for animation and Motion Graphics.
                     <br>
-                    These are some UI prototypes I have come up with for both Web & Mobile. Many of the designs were created as part of a 
+                    These are some of the UI prototypes I have come up with for both Web & Mobile. Many of the designs were created in a 1-day timeframe as part of the 
                     <a href="https://www.dailyui.co/">Daily UI Design Challenge</a></p>
                 </div>
 
