--- a/subpage/design/mobile.html
+++ b/subpage/design/mobile.html
@@ -58,16 +58,10 @@
                         </article>
                     </div>
                     <div class="col-8 col-12-mobile">
-                        <p style="padding: 0 2em;"><br>In addition to learning to be a Developer, over the years I have taught myself and gained
-                        deep
-                        experience with Industry tools such as
-                        <strong>Sketch
-                        </strong> for UI mockups, and <strong>Adobe AfterEffects</strong> for animation and Motion
-                        Graphics.
-                        <br>
-                        These are some UI prototypes I have come up with for both Web & Mobile. Many of the designs were
-                        created as part of a
-                        <a href="https://www.dailyui.co/">Daily UI Design Challenge</a></p>
+                        <p style="padding: 0 2em;"><br>Although I don't have any experience developing mobile apps, I felt it was important to learn to 
+                        design interfaces for mobile devices. With the rise of Mobile-first design, its proven to be a valuable experience learning how to 
+                        create user experiences with the smallest screen sizes in mind. 
+                        </p>
                     </div>
                     <div class="row links">
                         <li class="social-link">
