--- a/subpage/design/web.html
+++ b/subpage/design/web.html
@@ -18,7 +18,7 @@
 
             <div class="top">
                 <div class="row">
-                    <h2 class="alt">UI Design</h2>
+                    <h2 class="alt">Web UI Design</h2>
                 </div>
                 <div class="row">
                     <div class="col-4 col-12-mobile">
@@ -74,17 +74,10 @@
                 </div>
 
                 <div class="row">
-                    <p><br>In addition to learning to be a Developer, over the years I have taught myself and gained deep
-                        experience with Industry tools such as
-                        <strong>Sketch
-                        </strong> for UI mockups, and <strong>Adobe AfterEffects</strong> for animation and Motion
-                        Graphics.
-                        <br>
-                        These are some UI prototypes I have come up with for both Web & Mobile. Many of the designs were
-                        created as part of a
-                        <a href="https://www.dailyui.co/">Daily UI Design Challenge</a></p>
+                    <p><br>The <a href="https://www.dailyui.co/">Daily UI Design Challenge</a> has provided me many open eneded opportunities to come up with interfaces
+                        for the web. Above are some of my favorite UI designs from this past year.
+                    </p>
                 </div>
-
                 <div class="row links">
                     <li class="social-link">
                         <a href="https://www.behance.net/tblarele051#" class="icon fa-behance"><br>Behance</a>
