--- a/subpage/mybnb.html
+++ b/subpage/mybnb.html
@@ -16,25 +16,29 @@
 
             <div class="top">
                 <div class="left">
-                    <img class="mySlides" src="./mybnb/1.png" alt="img1">
-                    <img class="mySlides" src="./mybnb/2.png" alt="img2">
-                    <img class="mySlides" src="./mybnb/3.png" alt="img3">
-                    <img class="mySlides" src="./mybnb/4.png" alt="img4">
-                    <button class="slideButton" onclick="plusDivs(-1)">&#10094;</button>
-                    <button class="slideButton" onclick="plusDivs(+1)">&#10095;</button>
+                    <img class="mySlides one" src="./mybnb/1.png" alt="img1">
+                    <img class="mySlides one" src="./mybnb/2.png" alt="img2">
+                    <img class="mySlides one" src="./mybnb/3.png" alt="img3">
+                    <img class="mySlides one" src="./mybnb/4.png" alt="img4">
+                    <button class="slideButton" onclick="plusDivs(-1,'one')">&#10094;</button>
+                    <button class="slideButton" onclick="plusDivs(+1,'one')">&#10095;</button>
                 </div>
                 <div class="right">
                     <img src="../images/mybnb_logo_smaller.png">
                     <p>MyBnB is a clone of Airbnb built using a <strong>Ruby on Rails</strong> backend, <strong>React.js & Redux</strong> frontend, a <strong>PostgreSQL</strong> database and <strong>Active
                        Storage</strong> with <strong>Amazon S3</strong>.
-                    <br><br>
+                    <br>
                     The project was planned, designed, and developed within a 10-day timeframe, although improvements and additional features will
                     continue to be fleshed out.</p>
                 </div>
 
                 <div class="row links">
-                    <a href="https://mybnbrails.herokuapp.com/#/" class="link">Live Site</a>
-                    <a href="https://github.com/tblarel/mybnb/" class="link">Github</a>
+                    <li class="social-link">
+                        <a href="https://mybnbrails.herokuapp.com" class="icon fa-globe"><br>Live Site</a>
+                    </li>
+                    <li class="social-link">
+                        <a href="https://github.com/tblarel/mybnb/" class="icon fa-github"><br>Github</a>
+                    </li>
                 </div>
             </div>
 
