Add Show-More button and functionality for rendering additional info in modals, Adjust JS & CSS. Eliminate 'Designs' subpage, replacing it with a modal with links to individual subpages for Mobile & Web UI designs

--- a/subpage/design/anim.html
+++ b/subpage/design/anim.html
@@ -12,7 +12,7 @@
 <body class="is-preload">
 
     <div id="subpage">
-        <a class="back" href="../design.html">&#10094; Back</a>
+        <a class="back" href="../../index.html">&#10094; Back</a>
         <!-- Content -->
         <div class="container">
 
