--- a/subpage/design/web.html
+++ b/subpage/design/web.html
@@ -12,7 +12,7 @@
 <body class="is-preload">
 
     <div id="subpage">
-        <a class="back" href="../design.html">&#10094; Back</a>
+        <a class="back" href="../../index.html">&#10094; Back</a>
         <!-- Content -->
         <div class="container">
 
