--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 																<button class="slideButton" onclick="plusDivs(+1,'one')">&#10095;</button>
 															</div>
 															<div class="right">
-																<p class="modal-text"><strong>MyBnB</strong> is a clone of Airbnb built using a <strong>Ruby on Rails</strong> backend, <strong>React.js &
+																<p class="modal-text"><br><strong>MyBnB</strong> is a clone of Airbnb built using a <strong>Ruby on Rails</strong> backend, <strong>React.js &
 																		Redux</strong> frontend, a <strong>PostgreSQL</strong> database and <strong>Active
 																		Storage</strong> with <strong>Amazon S3</strong>.
 																	<br><br>
@@ -156,24 +156,34 @@
 														<div class="top">
 															<div class="left">
 																<div class="mySlides two" >
-																	<img src="./subpage/mybnb/1.png" alt="img1">
+																	<img src="./images/son.jpg" alt="img1">
 																</div>
 																<div class="mySlides two" >
-																	<img src="./subpage/mybnb/2.png" alt="img1">
+																	<img src="./images/pic03.jpg" alt="img1">
 																</div>
 													
 																<button class="slideButton" onclick="plusDivs(-1,'two')">&#10094;</button>
 																<button class="slideButton" onclick="plusDivs(+1,'two')">&#10095;</button>
 															</div>
 															<div class="right">
-																<p class="modal-text">Sonify was developed as a Capstone Senior Design Project by a team of three engineering students at the University of
-																Miami. The Full Stack Web Application provides recommendations based off of the acoustic properties of a given track.</p>
+																<p class="modal-text"><br><strong>Sonify</strong> was developed as a Capstone Senior Design Project by a team of three engineering students at the University of
+																Miami. The Full Stack Web Application provides recommendations based off of the acoustic properties of a given track.
+																</p>
+																<ul>
+																	<strong>Winners:</strong>
+																	<li>
+																		Best Overall Senior Design Project	
+																	</li>
+																	<li>
+																		Industry Impact Award
+																	</li>
+																</ul> 
 																<a class="trigger-more one">More Info</a>
 																<p class="show-more one">
 																	By interfacing with <strong>Spotify's API</strong>, User's can search for recommendations of any track in Spotify's catalog. The track's audio file is then analyzed on the Back End where 12 features such as tempo and chord progressions are extracted.
-																	We applied machine learning to provide recommendations, feeding our feature vectror into a Weighted KNN algorithm and using a Wave-Hedges distance metric to recommend the 10 nearest neighbors.
+																	We applied machine learning to provide recommendations, feeding our feature vectror into a Weighted KNN algorithm and using the Wave-Hedges distance metric to recommend the 10 nearest neighbors.
 																	<br><br>
-																	By making <strong>AJAX</strong> calls to Spotify's API and fetching album art and audio previews, the results are then presented on the Front End to the user.
+																	Then, by making <strong>AJAX</strong> calls to Spotify's API and fetching album art and audio previews, the results are then presented on the Front End to the user.
 																	For this project, my teammates primarily focused on implementing our Backend Analysis & Recommendation algorithms while I built out our 
 																	<strong>Full Stack with Django</strong> and <strong>Front End in Javascript, AJAX, HTML, and CSS</strong>. Because the backend algorithms take some time to process User input, 
 																	I needed to make sure that the User Experience was a cohesive pleasant experience even when waiting for results. To this end, I designed a logo with multiple Vector Layers in Photoshop
@@ -186,7 +196,7 @@
 																	<a href="https://vimeo.com/286591608" class="icon fa-globe"><br>Video Demo</a>
 																</li>
 																<li class="social-link">
-																	<a href="https://github.com/tblarel/mybnb/" class="icon fa-newspaper"><br>Article</a>
+																	<a href="http://www.coe.miami.edu/senior-design-expo-showcases-solutions-to-real-world-challenges/" class="icon fa-newspaper"><br>Article</a>
 																</li>
 															</div>
 														</div>
@@ -211,25 +221,25 @@
 														<div class="top">
 															<div class="left">
 																<div class="mySlides three" >
-																	<img src="./subpage/mybnb/1.png" alt="img1">
-																	<a href="./design/web.html">Web UI Concepts</a>
+																	<img src="./images/ktm.jpg" alt="img1">
+																	<a href="./subpage/design/web.html">Web UI Concepts</a>
 																</div>
 																<div class="mySlides three" >
-																	<img src="./subpage/mybnb/2.png" alt="img1">
-																	<a href="./design/mobile.html">Mobile UI Concepts</a>
+																	<img src="./images/icon.jpg" alt="img1">
+																	<a href="./subpage/design/mobile.html">Mobile UI Concepts</a>
 																</div>
 																<div class="mySlides three">
-																	<img src="./subpage/mybnb/3.png" alt="img1">
-																	<a href="./design/anim.html">UI Animations</a>
+																	<img src="./images/fut_anim.jpg" alt="img1">
+																	<a href="./subpage/design/anim.html">UI Animations</a>
 																</div>
 																<button class="slideButton" onclick="plusDivs(-1,'three')">&#10094;</button>
 																<button class="slideButton" onclick="plusDivs(+1,'three')">&#10095;</button>
 															</div>
 															<div class="right">
-																<p class="modal-text">In addition to learning to be a Developer, over the years I have learned and gained deep experience with Industry
+																<p class="modal-text"><br>In addition to learning to be a Developer, over the years I have learned and gained deep experience with Industry
 																tools such as <strong>Sketch</strong> for UI mockups, and <strong>Adobe AfterEffects</strong> for animation and Motion
 																Graphics.
-																<br>
+																<br><br>
 																These are some of the UI prototypes I have come up with for both Web & Mobile. Many of the designs were created in a
 																1-day timeframe as part of the
 																<a href="https://www.dailyui.co/">Daily UI Design Challenge</a>
@@ -248,8 +258,8 @@
 													</div>
 												</div>
 
-									<article class="item">
-										<a href="./backcountry/index.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<article class="item trigger four">
+										<a class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>BackCountry | Scripting & Art</h3>
 										</header>
@@ -259,10 +269,36 @@
 											<i class="fab fa-adobe"></i>
 										</footer>
 									</article>
+											<div class="modal four">
+												<div class="modal-content">
+													<span class="close-button">×</span>
+													<div class="top">
+														<div class="left">
+															<div class="mySlides">
+																<img src="./images/pic05.jpg" alt="img1">
+																<a href="./backcountry/index.html">Demo the game</a>
+															</div>
+														</div>
+														<div class="right">
+															<p class="modal-text"><br>My last year at Miami, I developped a 2D top-down Ski game in <strong>Unity</strong>. I designed all game assets & sprites in <strong>Photoshop</strong> and coded
+															the game logic in <strong>C#</strong>. There are currently two levels of increasing difficulty to choose from and an "Endless" mode in which the game
+															dynamically generates an endless level. On levels one and two, you can tell how close you are to completing the slope by the 
+															proportion of snow-capped trees being spawned. As you near the bottom nearly all trees will no longer have snow.
+															</p>
+														</div>
+											
+														<div class="row links">
+															<li class="social-link">
+																<a href="./backcountry/index.html" class="icon fa-globe"><br>Live Build</a>
+															</li>
+														</div>
+													</div>
+												</div>
+											</div>
 								</div>
 								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="./subpage/web_design.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<article class="item trigger five">
+										<a class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
 											<h3>Web Design</h3>
 										</header>
@@ -272,6 +308,41 @@
 											<i class="fab fa-css3-alt"></i>
 										</footer>
 									</article>
+											<div class="modal five">
+												<div class="modal-content">
+													<span class="close-button">×</span>
+													<div class="top">
+														<div class="left">
+															<div class="mySlides five">
+																<img src="./images/sthd.jpg" alt="img1">
+																<a href="./subpage/student_support.html">Student Support Site</a>
+															</div>
+															<div class="mySlides five">
+																<img src="./images/pic06.jpg" alt="img1">
+																<a href="./subpage/mredu.html">Masters of Real Estate + Urbanism</a>
+															</div>
+															<div class="mySlides five">
+																<img src="./images/publications.jpg" alt="img1">
+																<a href="./subpage/designs.html">Designs for Publication</a>
+															</div>
+															<button class="slideButton" onclick="plusDivs(-1,'five')">&#10094;</button>
+															<button class="slideButton" onclick="plusDivs(+1,'five')">&#10095;</button>
+														</div>
+														<div class="right">
+															<p class="modal-text"><br>Beginning my junior year and continuing through my senior year, I was employed by the University of Miami IT department
+															and School of Architecture as a Student Web Designer.
+															<br><br>
+															My major assignment in each of these roles was to lead the redesign of the Student Support Website and Master of Real
+															Estate + Urbanism program.
+															Additionally, I used <strong>Photoshop</strong> & <strong>Adobe InDesign</strong> to design publications and promotional material for over 20 events
+															attended by hundreds.
+															</p>
+														</div>
+
+													</div>
+												</div>
+											</div>
+
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
