--- a/subpage/web_design.html
+++ b/subpage/web_design.html
@@ -41,16 +41,11 @@
                 </div>
 
                 <div class="row">
-                    <br>
-                    <p>In addition to learning to be a Developer, over the years I have taught myself and gained deep
-                        experience with Industry tools such as
-                        <strong>Sketch
-                        </strong> for UI mockups, and <strong>Adobe AfterEffects</strong> for animation and Motion
-                        Graphics.
-                        <br>
-                        These are some UI prototypes I have come up with for both Web & Mobile. Many of the designs were
-                        created as part of a
-                        <a href="https://www.dailyui.co/">Daily UI Design Challenge</a></p>
+                    <p>Beginning my junior year and continuing through my senior year, I was employed by the University of Miami IT department
+                    and School of Architecture as a Student Web Designer.
+                    <br><br>
+                    My major assignment was to lead the redesign of the student support website for the IT Department and Master of Real Estate + Urbanism program for the School of Architecture.
+                    Additionally, I also used Photoshop & InDesign to design publications and promotional material for over 20 events attended by hundreds.</p>
                 </div>
 
             </div>
