Work on subpages and modals

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<h2 class="alt">Hello I'm <strong>Tristan Blarel</strong><br/></h2>
 								<p>I am a Full Stack Developer with a degree in Computer Engineering and a passion for Software and Design</p><br/>
 								<a href="#" class="button download">
-									<i class="fa fa-download"></i>
+									<i class="fa fa-file" style="padding-left: .5em"></i>
 									<div class="button-text">
 										Download Resume
 									</div>
@@ -167,17 +167,9 @@
 															</div>
 															<div class="right">
 																<p class="modal-text"><br><strong>Sonify</strong> was developed as a Capstone Senior Design Project by a team of three engineering students at the University of
-																Miami. The Full Stack Web Application provides recommendations based off of the acoustic properties of a given track.
+																Miami. The Full Stack Web Application provides recommendations based off of the acoustic properties of a given track. <strong>Winners: Best Overall Senior Design Project & Industry Impact Award </strong>
 																</p>
-																<ul>
-																	<strong>Winners:</strong>
-																	<li>
-																		Best Overall Senior Design Project	
-																	</li>
-																	<li>
-																		Industry Impact Award
-																	</li>
-																</ul> 
+																
 																<a class="trigger-more one">More Info</a>
 																<p class="show-more one">
 																	By interfacing with <strong>Spotify's API</strong>, User's can search for recommendations of any track in Spotify's catalog. The track's audio file is then analyzed on the Back End where 12 features such as tempo and chord progressions are extracted.
@@ -300,7 +292,7 @@
 									<article class="item trigger five">
 										<a class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Web Design</h3>
+											<h3>Web & Graphic Design</h3>
 										</header>
 										<footer>
 											<i class="fab fa-js"></i>
@@ -318,7 +310,7 @@
 																<a href="./subpage/student_support.html">Student Support Site</a>
 															</div>
 															<div class="mySlides five">
-																<img src="./images/pic06.jpg" alt="img1">
+																<img src="./images/mredu_short.jpg" alt="img1">
 																<a href="./subpage/mredu.html">Masters of Real Estate + Urbanism</a>
 															</div>
 															<div class="mySlides five">
@@ -343,8 +335,8 @@
 												</div>
 											</div>
 
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<article class="item trigger seven">
+										<a class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Other Work</h3>
 										</header>
@@ -355,6 +347,42 @@
 											<i class="fas fa-video"></i>
 										</footer>
 									</article>
+											<div class="modal seven">
+												<div class="modal-content">
+													<span class="close-button">×</span>
+													<div class="top">
+														<div class="left">
+															<div class="mySlides eight">
+																<img src="./images/sthd.jpg" alt="img1">
+																<a href="./subpage/student_support.html">Student Support Site</a>
+															</div>
+															<div class="mySlides eight">
+																<img src="./images/pic06.jpg" alt="img1">
+																<a href="./subpage/mredu.html">Masters of Real Estate + Urbanism</a>
+															</div>
+															<div class="mySlides eight">
+																<img src="./images/publications.jpg" alt="img1">
+																<a href="./subpage/designs.html">Designs for Publication</a>
+															</div>
+															<button class="slideButton" onclick="plusDivs(-1,'eight')">&#10094;</button>
+															<button class="slideButton" onclick="plusDivs(+1,'eight')">&#10095;</button>
+														</div>
+														<div class="right">
+															<p class="modal-text"><br>Beginning my junior year and continuing through my senior year, I was employed
+																by the University of Miami IT department
+																and School of Architecture as a Student Web Designer.
+																<br><br>
+																My major assignment in each of these roles was to lead the redesign of the Student Support Website
+																and Master of Real
+																Estate + Urbanism program.
+																Additionally, I used <strong>Photoshop</strong> & <strong>Adobe InDesign</strong> to design
+																publications and promotional material for over 20 events
+																attended by hundreds.
+															</p>
+														</div>
+													</div>
+												</div>
+											</div>
 								</div>
 							</div>
 
@@ -370,7 +398,7 @@
 							</header>
 							<p>I'm Tristan, a web developer with experience in Javascript, Ruby, Ruby on Rails, React, Redux and a background in Computer Engineering.
 								I have worked as a web and graphic designer and although my career interests lie in Development, I also have a knack for design. 
-								 In my spare time I love skiing, watching Soccer, Photography, and exploring Nature.
+								 In my spare time I love skiing, soccer, photography, and enjoying the outdoors.
 							</p>
 							<hr>
 							<br>
@@ -394,7 +422,7 @@
 							<div class="row centered">
 								<div class="col-6">
 									<strong>Proficient In:</strong><br>
-									Ruby, Ruby on Rails, Javascript, React.js, Redux, Git, Node.js, jQuery, HTML, CSS, SCSS, SQL, Adobe Creative Suite, Sketch, Bootstrap & Foundation, Microsoft Office
+									Ruby, Ruby on Rails, JavaScript, React.js, Redux, Git, Node.js, jQuery, HTML, CSS, SCSS, SQL, Adobe Creative Suite, Sketch, Bootstrap & Foundation, Microsoft Office
 								</div>
 								<div class="col-6">
 									<strong>Experience With:</strong><br> 
