--- a/subpage/design/mobile.html
+++ b/subpage/design/mobile.html
@@ -58,19 +58,20 @@
                         </article>
                     </div>
                     <div class="col-8 col-12-mobile">
-                        <p style="padding: 0 2em;"><br>Although I don't have any experience developing mobile apps, I felt it was important to learn to 
+                        <p style="padding: 0 2em;"><br>Although I don't have experience yet developing mobile apps, I felt it was important to learn to 
                         design interfaces for mobile devices. With the rise of Mobile-first design, its proven to be a valuable experience learning how to 
                         create user experiences with the smallest screen sizes in mind. 
                         </p>
+                        <div class="row links">
+                            <li class="social-link">
+                                <a href="https://www.behance.net/tblarele051#" class="icon fa-behance"><br>Behance</a>
+                            </li>
+                            <li class="social-link">
+                                <a href="https://dribbble.com/tblarel" class="icon fa-dribbble"><br>Dribbble</a>
+                            </li>
+                        </div>
                     </div>
-                    <div class="row links">
-                        <li class="social-link">
-                            <a href="https://www.behance.net/tblarele051#" class="icon fa-behance"><br>Behance</a>
-                        </li>
-                        <li class="social-link">
-                            <a href="https://dribbble.com/tblarel" class="icon fa-dribbble"><br>Dribbble</a>
-                        </li>
-                    </div>
+                    
                 </div>
             </div>
 
