Create Video and Photography subpages, Adjust tile slide buttons to be on sides of tiles rather than beneath.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 														<span class="close-button">×</span>
 														<div class="top">
 															<div class="left">
+																<button class="slideButton left-button" onclick="plusDivs(-1,'one')">&#10094;</button>
+
 																<div class="mySlides one" >
 																	<img src="./subpage/mybnb/1.png" alt="img1">
 																</div>
@@ -111,11 +113,10 @@
 																<div class="mySlides one" >
 																	<img src="./subpage/mybnb/4.png" alt="img4">
 																</div>
-																<img class="mySlides one" src="./subpage/mybnb/2.png" alt="img2">
+																<!-- <img class="mySlides one" src="./subpage/mybnb/2.png" alt="img2">
 																<img class="mySlides one" src="./subpage/mybnb/3.png" alt="img3">
-																<img class="mySlides one" src="./subpage/mybnb/4.png" alt="img4">
-																<button class="slideButton" onclick="plusDivs(-1,'one')">&#10094;</button>
-																<button class="slideButton" onclick="plusDivs(+1,'one')">&#10095;</button>
+																<img class="mySlides one" src="./subpage/mybnb/4.png" alt="img4"> -->
+																<button class="slideButton right-button" onclick="plusDivs(+1,'one')">&#10095;</button>
 															</div>
 															<div class="right">
 																<p class="modal-text"><br><strong>MyBnB</strong> is a clone of Airbnb built using a <strong>Ruby on Rails</strong> backend, <strong>React.js &
@@ -155,6 +156,7 @@
 														<span class="close-button">×</span>
 														<div class="top">
 															<div class="left">
+																<button class="slideButton left-button" onclick="plusDivs(-1,'two')">&#10094;</button>
 																<div class="mySlides two" >
 																	<img src="./images/son.jpg" alt="img1">
 																</div>
@@ -162,8 +164,7 @@
 																	<img src="./images/pic03.jpg" alt="img1">
 																</div>
 													
-																<button class="slideButton" onclick="plusDivs(-1,'two')">&#10094;</button>
-																<button class="slideButton" onclick="plusDivs(+1,'two')">&#10095;</button>
+																<button class="slideButton right-button" onclick="plusDivs(+1,'two')">&#10095;</button>
 															</div>
 															<div class="right">
 																<p class="modal-text"><br><strong>Sonify</strong> was developed as a Capstone Senior Design Project by a team of three engineering students at the University of
@@ -212,6 +213,7 @@
 														<span class="close-button">×</span>
 														<div class="top">
 															<div class="left">
+																<button class="slideButton left-button" onclick="plusDivs(-1,'three')">&#10094;</button>
 																<div class="mySlides three" >
 																	<img src="./images/ktm.jpg" alt="img1">
 																	<a href="./subpage/design/web.html">Web UI Concepts</a>
@@ -224,8 +226,7 @@
 																	<img src="./images/fut_anim.jpg" alt="img1">
 																	<a href="./subpage/design/anim.html">UI Animations</a>
 																</div>
-																<button class="slideButton" onclick="plusDivs(-1,'three')">&#10094;</button>
-																<button class="slideButton" onclick="plusDivs(+1,'three')">&#10095;</button>
+																<button class="slideButton right-button" onclick="plusDivs(+1,'three')">&#10095;</button>
 															</div>
 															<div class="right">
 																<p class="modal-text"><br>In addition to learning to be a Developer, over the years I have learned and gained deep experience with Industry
@@ -305,6 +306,7 @@
 													<span class="close-button">×</span>
 													<div class="top">
 														<div class="left">
+															<button class="slideButton left-button" onclick="plusDivs(-1,'five')">&#10094;</button>
 															<div class="mySlides five">
 																<img src="./images/sthd.jpg" alt="img1">
 																<a href="./subpage/student_support.html">Student Support Site</a>
@@ -317,8 +319,7 @@
 																<img src="./images/publications.jpg" alt="img1">
 																<a href="./subpage/designs.html">Designs for Publication</a>
 															</div>
-															<button class="slideButton" onclick="plusDivs(-1,'five')">&#10094;</button>
-															<button class="slideButton" onclick="plusDivs(+1,'five')">&#10095;</button>
+															<button class="slideButton right-button" onclick="plusDivs(+1,'five')">&#10095;</button>
 														</div>
 														<div class="right">
 															<p class="modal-text"><br>Beginning my junior year and continuing through my senior year, I was employed by the University of Miami IT department
@@ -336,7 +337,7 @@
 											</div>
 
 									<article class="item trigger seven">
-										<a class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/match-stats.jpg" alt="" /></a>
 										<header>
 											<h3>Other Work</h3>
 										</header>
@@ -352,32 +353,25 @@
 													<span class="close-button">×</span>
 													<div class="top">
 														<div class="left">
+															<button class="slideButton left-button" onclick="plusDivs(-1,'eight')">&#10094;</button>
 															<div class="mySlides eight">
-																<img src="./images/sthd.jpg" alt="img1">
-																<a href="./subpage/student_support.html">Student Support Site</a>
+																<img src="./images/video_short.jpg" alt="img1">
+																<a href="./subpage/video.html">Video Editing</a>
 															</div>
 															<div class="mySlides eight">
-																<img src="./images/pic06.jpg" alt="img1">
-																<a href="./subpage/mredu.html">Masters of Real Estate + Urbanism</a>
+																<img src="./images/photography.jpg" alt="img1">
+																<a href="./subpage/photography.html">Photography</a>
 															</div>
 															<div class="mySlides eight">
-																<img src="./images/publications.jpg" alt="img1">
-																<a href="./subpage/designs.html">Designs for Publication</a>
+																<img src="./images/match-stats_short.jpg" alt="img1">
+																<a href="./subpage/designs.html">Passion Projects</a>
 															</div>
-															<button class="slideButton" onclick="plusDivs(-1,'eight')">&#10094;</button>
-															<button class="slideButton" onclick="plusDivs(+1,'eight')">&#10095;</button>
+															<button class="slideButton right-button" onclick="plusDivs(+1,'eight')">&#10095;</button>
 														</div>
 														<div class="right">
-															<p class="modal-text"><br>Beginning my junior year and continuing through my senior year, I was employed
-																by the University of Miami IT department
-																and School of Architecture as a Student Web Designer.
-																<br><br>
-																My major assignment in each of these roles was to lead the redesign of the Student Support Website
-																and Master of Real
-																Estate + Urbanism program.
-																Additionally, I used <strong>Photoshop</strong> & <strong>Adobe InDesign</strong> to design
-																publications and promotional material for over 20 events
-																attended by hundreds.
+															<p class="modal-text"><br>Outside of developing, I have many hobbies and interests ranging from 
+																Photography to Video Editing & Animation. <br><br> 
+																Check out some of my favorite work from the past few years above.
 															</p>
 														</div>
 													</div>
@@ -392,7 +386,7 @@
 				<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
-
+							<img class="circle" src="./images/wolves.jpg">
 							<header>
 								<h2>About Me</h2>
 							</header>
@@ -442,8 +436,6 @@
 								<h2>Get in touch!</h2>
 								<br>
 							</header>
-
-
 							<form method="post" action="#">
 								<div class="row centered">
 									<div class="col-3">
