--- a/subpage/designs.html
+++ b/subpage/designs.html
@@ -16,6 +16,7 @@
 
             <div class="top">
                 <div class="left">
+                    <button class="slideButton left-subpage-button" onclick="plusDivs(-1,'seven')">&#10094;</button>
                     <div class="large mySlides seven">
                         <img src="../images/ski_mag.jpg" alt="img1">
                         <p>Ski Magazine</p>
@@ -26,8 +27,7 @@
                         <p>Lecture Series</p>
                         <a href="../images/mredExec.png">Full Res</a>
                     </div>
-                    <button class="slideButton" onclick="plusDivs(-1,'seven')">&#10094;</button>
-                    <button class="slideButton" onclick="plusDivs(+1,'seven')">&#10095;</button>
+                    <button class="slideButton right-subpage-button" onclick="plusDivs(+1,'seven')">&#10095;</button>
                 </div>
                 <div class="right">
                     <h1 class="subpage-title">Designs for Publication</h1>
