Flesh out video subpage, refactor subpages to be more responsive. Add clickable links onto the names of projects on their tiles. CSS and Index adjustments.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<header>
 								<h2 class="alt">Hello I'm <strong>Tristan Blarel</strong><br/></h2>
 								<p>I am a Full Stack Developer with a degree in Computer Engineering and a passion for Software and Design</p><br/>
-								<a href="#" class="button download">
+								<a href="./resume_may_2019.pdf" class="button download">
 									<i class="fa fa-file" style="padding-left: .5em"></i>
 									<div class="button-text">
 										Download Resume
