--- a/subpage/design/mobile.html
+++ b/subpage/design/mobile.html
@@ -26,7 +26,9 @@
                             <a href="https://www.behance.net/gallery/72234955/DailyUI-001-Login-Page" class="image fit"><img src="../../images/hike.jpg"
                                     alt="" /></a>
                             <header>
-                                <h3>Onboarding Screen</h3>
+                                <a href="https://www.behance.net/gallery/72234955/DailyUI-001-Login-Page">
+                                    <h3>Onboarding Screen</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
@@ -35,7 +37,9 @@
                             <a href="https://dribbble.com/shots/5890461-Football-Soccer-Mobile-App-Concept" class="image fit"><img src="../../images/sports.jpg"
                                     alt="" /></a>
                             <header>
-                                <h3>Sports App</h3>
+                                <a href="https://dribbble.com/shots/5890461-Football-Soccer-Mobile-App-Concept">
+                                    <h3>Sports App</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
@@ -44,7 +48,9 @@
                             <a href="https://dribbble.com/shots/5550111-Spotify-App-Redesign-DailyUI-006-009" class="image fit"><img src="../../images/spotify.jpg"
                                     alt="" /></a>
                             <header>
-                                <h3>Spotify Redesign</h3>
+                                <a href="https://dribbble.com/shots/5550111-Spotify-App-Redesign-DailyUI-006-009">
+                                    <h3>Spotify Redesign</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
@@ -53,7 +59,9 @@
                             <a href="https://www.behance.net/gallery/72366631/DailyUI-005-App-Icon" class="image fit"><img src="../../images/icon.jpg"
                                     alt="" /></a>
                             <header>
-                                <h3>App Icon</h3>
+                                <a href="https://www.behance.net/gallery/72366631/DailyUI-005-App-Icon">
+                                    <h3>App Icon</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
