--- a/subpage/designs.html
+++ b/subpage/designs.html
@@ -14,8 +14,8 @@
         <!-- Content -->
         <div class="container">
 
-            <div class="top">
-                <div class="left">
+            <div class="row centered">
+                <div class="col-6 col-12-mobile centered">
                     <button class="slideButton left-subpage-button" onclick="plusDivs(-1,'seven')">&#10094;</button>
                     <div class="large mySlides seven">
                         <img src="../images/ski_mag.jpg" alt="img1">
@@ -29,7 +29,7 @@
                     </div>
                     <button class="slideButton right-subpage-button" onclick="plusDivs(+1,'seven')">&#10095;</button>
                 </div>
-                <div class="right">
+                <div class="col-6 col-12-mobile">
                     <h1 class="subpage-title">Designs for Publication</h1>
                     <p class="subpage-text">Both in my previous jobs and on the side I have gained experience in Graphic Design. Using 
                         Adobe Photoshop, Illustrator, and InDesign has allowed me to bring my designs to life both in Print and on the Web.
