--- a/subpage/mredu.html
+++ b/subpage/mredu.html
@@ -14,8 +14,9 @@
         <!-- Content -->
         <div class="container">
 
-            <div class="top">
-                <div class="left">
+            <div class="row centered">
+                <div class="col-6 col-12-mobile centered">
+                    <button class="slideButton left-subpage-button" onclick="plusDivs(-1,'six')">&#10094;</button>
                     <div class="large mySlides six">
                         <img src="../images/mredu1.jpg" alt="img1">
                         <a href="https://mredu.arc.miami.edu/">Updated Live Site</a>
@@ -24,10 +25,9 @@
                         <img src="../images/mredu_old1.jpg" alt="img2">
                         <p>Old Site</a>
                     </div>
-                    <button class="slideButton" onclick="plusDivs(-1,'six')">&#10094;</button>
-                    <button class="slideButton" onclick="plusDivs(+1,'six')">&#10095;</button>
+                    <button class="slideButton right-subpage-button" onclick="plusDivs(+1,'six')">&#10095;</button>
                 </div>
-                <div class="right">
+                <div class="col-6 col-12-mobile">
                     <h1 class="subpage-title">Masters of Real Estate & Urbanism</h1>
                     <p class="subpage-text">During my Senior year, I worked part-time as a Web & Graphic Designer for the School of Architecture, specifically the
                     Masters program in Real Estate Development & Urbanism (MRED+U).
