--- a/subpage/student_support.html
+++ b/subpage/student_support.html
@@ -14,14 +14,14 @@
         <!-- Content -->
         <div class="container">
 
-            <div class="top">
-                <div class="left">
+            <div class="row centered">
+                <div class="col-6 col-12-mobile centered">
                     <div class="large mySlides">
                         <img src="../images/sthd_tall.jpg" alt="img1">
                         <a href="https://studentsupport.it.miami.edu/">Live Site</a>
                     </div>
                 </div>
-                <div class="right">
+                <div class="col-6 col-12-mobile ">
                     <h1 class="subpage-title">Student Support</h1>
                     <p class="subpage-text">Beginning my junior year and continuing through my senior year, I was employed by the University of Miami IT department
                     as a Student Web Designer.
