--- a/subpage/design/web.html
+++ b/subpage/design/web.html
@@ -25,7 +25,7 @@
                         <article class="item">
                             <a href="https://www.behance.net/gallery/72326605/DailyUI-003-Landing-Page" class="image fit"><img src="../../images/wwf.jpg" alt="" /></a>
                             <header>
-                                <h3>Splash Page</h3>
+                                <a href="https://www.behance.net/gallery/72326605/DailyUI-003-Landing-Page"><h3>Splash Page</h3></a>
                             </header>
                         </article>
                     </div>
@@ -33,7 +33,9 @@
                         <article class="item">
                             <a href="https://www.behance.net/gallery/72502129/DailyUI-007-Settings-KTM-Bike-Customization" class="image fit"><img src="../../images/ktm.jpg" alt="" /></a>
                             <header>
-                                <h3>KTM Bike Customization</h3>
+                                <a href="https://www.behance.net/gallery/72502129/DailyUI-007-Settings-KTM-Bike-Customization">
+                                    <h3>KTM Bike Customization</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
@@ -42,7 +44,7 @@
                             <a href="https://www.behance.net/gallery/72281827/DailyUI-002-Credit-Card-Checkout" class="image fit"><img src="../../images/bpass.jpg"
                                     alt="" /></a>
                             <header>
-                                <h3>Tickets & Confirmation</h3>
+                                <a href="https://www.behance.net/gallery/72281827/DailyUI-002-Credit-Card-Checkout"><h3>Payment Component</h3></a>
                             </header>
                         </article>
                     </div>
@@ -51,15 +53,15 @@
                             <a href="https://www.behance.net/gallery/71748851/Ski-Store-Concept" class="image fit"><img src="../../images/skis.jpg"
                                     alt="" /></a>
                             <header>
-                                <h3>4FRNT Online Ski Store</h3>
+                                <a href="https://www.behance.net/gallery/71748851/Ski-Store-Concept"><h3>4FRNT Online Ski Store</h3></a>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                     <article class="item">
-                        <a href="./design/daily.html" class="image fit"><img src="../../images/kit.jpg" alt="" /></a>
+                        <a href="#" class="image fit"><img src="../../images/kit.jpg" alt="" /></a>
                         <header>
-                            <h3>Product Page</h3>
+                            <a href="#"><h3>Product Page</h3></a>
                         </header>
                     </article>
                     </div>
@@ -67,7 +69,9 @@
                         <article class="item">
                             <a href="https://www.behance.net/gallery/72555461/DailyUI-008-404-Page-Solar-System-Concept" class="image fit"><img src="../../images/404.jpg" alt="" /></a>
                             <header>
-                                <h3>404 Page</h3>
+                                <a href="https://www.behance.net/gallery/72555461/DailyUI-008-404-Page-Solar-System-Concept">
+                                    <h3>404 Page</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
