--- a/subpage/video.html
+++ b/subpage/video.html
@@ -22,8 +22,8 @@
                 <div class="row">
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.behance.net/gallery/72326605/DailyUI-003-Landing-Page"
-                                class="image fit"><img src="../../images/wwf.jpg" alt="" /></a>
+                            <a href="https://vimeo.com/287737687"
+                                class="image fit"><img src="../images/la_deuxieme.jpg" alt="" /></a>
                             <header>
                                 <h3>'La Deuxieme Etoile'</h3>
                             </header>
@@ -31,48 +31,43 @@
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.behance.net/gallery/72502129/DailyUI-007-Settings-KTM-Bike-Customization"
-                                class="image fit"><img src="../../images/ktm.jpg" alt="" /></a>
+                            <a href="https://vimeo.com/227981881"
+                                class="image fit"><img src="../images/tahoe.jpg" alt="" /></a>
                             <header>
-                                <h3>Tahoe</h3>
+                                <h3>Tahoe Ski Edit</h3>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.behance.net/gallery/72281827/DailyUI-002-Credit-Card-Checkout"
-                                class="image fit"><img src="../../images/bpass.jpg" alt="" /></a>
+                            <a href="https://vimeo.com/122205885"
+                                class="image fit"><img src="../images/apollo.jpg" alt="" /></a>
                             <header>
-                                <h3>Apollo</h3>
+                                <h3>Apollo Parallax</h3>
                             </header>
                         </article>
                     </div>
-                    <div class="col-4 col-12-mobile">
-                        <article class="item">
-                            <a href="https://www.behance.net/gallery/71748851/Ski-Store-Concept" class="image fit"><img
-                                    src="../../images/skis.jpg" alt="" /></a>
-                            <header>
-                                <h3>Cheetah Cub</h3>
-                            </header>
-                        </article>
-                    </div>
-                    <div class="col-4 col-12-mobile">
-                        <article class="item">
-                            <a href="./design/daily.html" class="image fit"><img src="../../images/kit.jpg"
-                                    alt="" /></a>
-                            <header>
-                                <h3>'Dinner for Two'</h3>
-                            </header>
-                        </article>
-                    </div>
-                    <div class="col-4 col-12-mobile">
-                        <article class="item">
-                            <a href="https://www.behance.net/gallery/72555461/DailyUI-008-404-Page-Solar-System-Concept"
-                                class="image fit"><img src="../../images/404.jpg" alt="" /></a>
-                            <header>
-                                <h3>Macklemore - The Heist</h3>
-                            </header>
-                        </article>
+                    <div class="row centered">
+
+                        <div class="col-4 col-12-mobile">
+                            <article class="item">
+                                <a href="https://vimeo.com/116216734" class="image fit"><img
+                                        src="../images/reel.jpg" alt="" /></a>
+                                <header>
+                                    <h3>2014 Reel</h3>
+                                </header>
+                            </article>
+                        </div>
+                        <div class="col-4 col-12-mobile">
+                            <article class="item">
+                                <a href="https://vimeo.com/181359217"
+                                    class="image fit"><img src="../images/euro.jpg" alt="" /></a>
+                                <header>
+                                    <h3>Euro 2016 French Highlights</h3>
+                                </header>
+                            </article>
+                        </div>
+
                     </div>
                 </div>
 
