Flesh out photo out photography subpage and videos subpage, add photos to images directory

--- a/subpage/photography.html
+++ b/subpage/photography.html
@@ -22,55 +22,67 @@
                 <div class="row">
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.behance.net/gallery/72326605/DailyUI-003-Landing-Page"
-                                class="image fit"><img src="../../images/wwf.jpg" alt="" /></a>
+                            <a href="../images/photography/fly_free.jpg"
+                                class="image fit"><img src="../images/photography/fly_free_thumb.jpg" alt="" /></a>
                             <header>
-                                <h3>'Fly Free'</h3>
+                                <a href="../images/photography/fly_free.jpg">
+                                    <h3>'Fly Free'</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.behance.net/gallery/72502129/DailyUI-007-Settings-KTM-Bike-Customization"
-                                class="image fit"><img src="../../images/ktm.jpg" alt="" /></a>
+                            <a href="../images/photography/cheetah_center.png"
+                                class="image fit"><img src="../images/photography/cheetah_center_thumb.jpg" alt="" /></a>
                             <header>
-                                <h3>'Hunter'</h3>
+                                <a href="../images/photography/cheetah_center.png">
+                                    <h3>'Hunter'</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.behance.net/gallery/72281827/DailyUI-002-Credit-Card-Checkout"
-                                class="image fit"><img src="../../images/bpass.jpg" alt="" /></a>
+                            <a href="../images/photography/gorilla.jpg"
+                                class="image fit"><img src="../images/photography/gorilla_thumb.jpg" alt="" /></a>
                             <header>
-                                <h3>'Portrait of a Gorilla'</h3>
+                                <a href="../images/photography/gorilla.jpg">
+                                    <h3>'Portrait of a Gorilla'</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.behance.net/gallery/71748851/Ski-Store-Concept" class="image fit"><img
-                                    src="../../images/skis.jpg" alt="" /></a>
+                            <a href="../images/photography/cheetah_cub.jpg" class="image fit"><img
+                                    src="../images/photography/cheetah_cub.jpg" alt="" /></a>
                             <header>
-                                <h3>Cheetah Cub</h3>
+                                <a href="../images/photography/cheetah_cub.jpg">
+                                    <h3>Cheetah Cub</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="./design/daily.html" class="image fit"><img src="../../images/kit.jpg"
-                                    alt="" /></a>
+                            <a href="../images/photography/two_zebras.png" 
+                                class="image fit"><img src="../images/photography/two_zebras_thumb.jpg" alt="" /></a>
                             <header>
-                                <h3>'Dinner for Two'</h3>
+                                <a href="../images/photography/two_zebras.png">
+                                    <h3>'Dinner for Two'</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://www.behance.net/gallery/72555461/DailyUI-008-404-Page-Solar-System-Concept"
-                                class="image fit"><img src="../../images/404.jpg" alt="" /></a>
+                            <a href="../images/photography/mack.jpg"
+                                class="image fit"><img src="../images/photography/mack_thumb.jpg" alt="" /></a>
                             <header>
-                                <h3>Macklemore - The Heist</h3>
+                                <a href="../images/photography/mack.jpg">
+                                    <h3>Macklemore - The Heist</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
