--- a/subpage/video.html
+++ b/subpage/video.html
@@ -25,7 +25,9 @@
                             <a href="https://vimeo.com/287737687"
                                 class="image fit"><img src="../images/la_deuxieme.jpg" alt="" /></a>
                             <header>
-                                <h3>'La Deuxieme Etoile'</h3>
+                                <a href="https://vimeo.com/28773768">
+                                    <h3>'La Deuxieme Etoile'</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
@@ -34,7 +36,9 @@
                             <a href="https://vimeo.com/227981881"
                                 class="image fit"><img src="../images/tahoe.jpg" alt="" /></a>
                             <header>
-                                <h3>Tahoe Ski Edit</h3>
+                                <a href="https://vimeo.com/227981881">
+                                    <h3>Tahoe Ski Edit</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
@@ -43,7 +47,9 @@
                             <a href="https://vimeo.com/122205885"
                                 class="image fit"><img src="../images/apollo.jpg" alt="" /></a>
                             <header>
-                                <h3>Apollo Parallax</h3>
+                                <a href="https://vimeo.com/122205885">
+                                    <h3>Apollo Parallax</h3>
+                                </a>
                             </header>
                         </article>
                     </div>
@@ -54,7 +60,9 @@
                                 <a href="https://vimeo.com/116216734" class="image fit"><img
                                         src="../images/reel.jpg" alt="" /></a>
                                 <header>
-                                    <h3>2014 Reel</h3>
+                                    <a href="https://vimeo.com/116216734">
+                                        <h3>2014 Reel</h3>
+                                    </a>
                                 </header>
                             </article>
                         </div>
@@ -63,7 +71,9 @@
                                 <a href="https://vimeo.com/181359217"
                                     class="image fit"><img src="../images/euro.jpg" alt="" /></a>
                                 <header>
-                                    <h3>Euro 2016 French Highlights</h3>
+                                    <a href="https://vimeo.com/181359217">
+                                        <h3>Euro 2016 French Highlights</h3>
+                                    </a>
                                 </header>
                             </article>
                         </div>
