Work on passionrk on Passion projects subpage

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 															</div>
 															<div class="mySlides eight">
 																<img src="./images/match-stats_short.jpg" alt="img1">
-																<a href="./subpage/designs.html">Passion Projects</a>
+																<a href="./subpage/passion.html">Passion Project</a>
 															</div>
 															<button class="slideButton right-button" onclick="plusDivs(+1,'eight')">&#10095;</button>
 														</div>
