Update CSS, index, and mredu subpage

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<div class="container">
 							<header>
 								<h2 class="alt">Hello I'm <strong>Tristan Blarel</strong><br/></h2>
-								<p>I am a Full Stack Developer with a degree in Computer Engineering and a passion for Software and Design</p><br/>
+								<p clsas="hero-text">I am a Full Stack Developer with a degree in Computer Engineering and a passion for Software and Design</p><br/>
 								<a href="./resume_may_2019.pdf" class="button download">
 									<i class="fa fa-file" style="padding-left: .5em"></i>
 									<div class="button-text">
@@ -273,7 +273,7 @@
 															</div>
 														</div>
 														<div class="right">
-															<p class="modal-text"><br>My last year at Miami, I developped a 2D top-down Ski game in <strong>Unity</strong>. I designed all game assets & sprites in <strong>Photoshop</strong> and coded
+															<p class="modal-text"><br>My last year at Miami, I developed a 2D top-down Ski game in <strong>Unity</strong>. I designed all game assets & sprites in <strong>Photoshop</strong> and coded
 															the game logic in <strong>C#</strong>. There are currently two levels of increasing difficulty to choose from and an "Endless" mode in which the game
 															dynamically generates an endless level. On levels one and two, you can tell how close you are to completing the slope by the 
 															proportion of snow-capped trees being spawned. As you near the bottom nearly all trees will no longer have snow.
