--- a/subpage/mredu.html
+++ b/subpage/mredu.html
@@ -32,9 +32,9 @@
                     <p class="subpage-text">During my Senior year, I worked part-time as a Web & Graphic Designer for the School of Architecture, specifically the
                     Masters program in Real Estate Development & Urbanism (MRED+U).
                     <br><br>
-                    One of my first major projects was to lead the redesign of the program's website. I began by coordinating with the
-                    Masters program coordinator and redesigned the sitemap in Slickplan. I then used the University's enterprise Cascade CMS
-                    system to implement the new site. and used photos I had taken around campus for homepage images and various site pages.
+                    One of my first major projects was to lead the redesign of the program's website. I began by working with the
+                    Masters program coordinator to create a new sitemap in Slickplan. I then used the University's enterprise Cascade CMS
+                    system to implement the new site and used photos I had captured around campus for images on various site pages.
                     </p>
                     <div class="row links">
                         <li class="social-link">
